# RAG

./: .dockerignore  .env.prod.example  .gitignore  AGENTS.MD  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  pyproject.toml  rag_mcp.py
.github/: dependabot.yml
rag_embedder/: .dockerignore  dockerfile.docs  mkdocs.yml  pyproject.toml
rag_embedder/app/: main.py
rag_embedder/app/api/: dependencies.py  lifespan.py
rag_embedder/app/api/routers/: embed_router.py
rag_embedder/app/core/: config.json  config.py  exceptions.py  metrics.py  telemetry.py
rag_embedder/app/dal/clients/: embedding_client.py  retriever_client.py
rag_embedder/app/dal/files/: markdown_reader.py
rag_embedder/app/domain/models/: document_model.py  embed_request_model.py  embed_text_request_model.py  vector_store_item_model.py
rag_embedder/app/schemas/: document_to_ingest_schema.py  embed_text_response_schema.py  ingest_bulk_response_schema.py
rag_embedder/app/services/: chunk_service.py  embed_service.py  embed_text_service.py  ingest_documents_service.py  load_documents_service.py
rag_embedder/docs/: index.md
rag_embedder/tests/Integration_tests/: test_embedding_client.py
rag_embedder/tests/integration_tests/: test_embedding_client_integration.py
rag_embedder/tests/unit_tests/: test_chunking_service.py  test_chunking_service_unit.py  test_config_unit.py  test_embed_router_unit.py  test_embedding_client.py  test_embedding_client_unit.py  test_ingest_documents_service_unit.py  test_load_documents_service_unit.py  test_markdown_reader_unit.py  test_retriever_client_unit.py
rag_evaluator/: .env.prod.example  dataset.json  dockerfile  mkdocs.yml  pyproject.toml
rag_evaluator/app/: main.py
rag_evaluator/app/api/: dependencies.py  lifespan.py
rag_evaluator/app/api/routers/: evaluate_router.py
rag_evaluator/app/core/: config.json  exceptions.py  logging.py  metrics.py  telemetry.py
rag_evaluator/app/dal/client/: judge_client.py  rag_api_client.py  rag_orchestrator_client.py
rag_evaluator/app/domain/models/: ask_question_request_model.py  ask_question_response_model.py  chunk_model.py  judge_response_model.py  rag_request_model.py
rag_evaluator/app/schemas/: Answer_evaluation_schema.py  evaluator_response_schema.py  retrieval_evaluation_schema.py
rag_evaluator/app/services/: calculating_metrics.py  calculating_metrics_service.py  evaluating_answer_service.py  evaluating_retrieval.py  evaluating_retrieval_service.py  evaluating_service.py  prompt_builder_service.py
rag_evaluator/docs/: index.md
rag_evaluator/tests/unit_tests/: test_calculating_metrics_service_unit.py  test_config_dependencies_unit.py  test_evaluate_router_unit.py  test_evaluating_answer_service_unit.py  test_evaluating_retrieval_service_unit.py  test_evaluating_service_unit.py  test_judge_client_unit.py  test_prompt_builder_service_unit.py  test_rag_orchestrator_client_unit.py
rag_ihm/: .env.prod.example  dockerfile  mkdocs.yml  pyproject.toml
rag_ihm/.streamlit/: config.toml
rag_ihm/app/: main.py
rag_ihm/app/components/: chat.py  common.py  dashboard.py
rag_ihm/app/pages/: chat.py  dashboard.py  feedbacks.py  usage.py
rag_ihm/app/services/: auth_service.py  rag_api_client.py
rag_ihm/app/state/: session_state.py
rag_ihm/app/styles/: theme.py
rag_ihm/docs/: index.md
rag_ihm/tests/: conftest.py
rag_ihm/tests/unit_tests/: test_auth_service_flow_unit.py  test_auth_service_unit.py  test_chat_components_unit.py  test_dashboard_components_unit.py  test_rag_api_client_http_unit.py  test_rag_api_client_more_unit.py  test_rag_api_client_unit.py  test_session_state_unit.py
rag_orchestrator/: .env.prod.example  dockerfile  mkdocs.yml  pyproject.toml
rag_orchestrator/app/: main.py
rag_orchestrator/app/api/: dependencies.py  lifespan.py
rag_orchestrator/app/core/: config.json  config.py  exceptions.py  logging.py  metrics.py  telemetry.py
rag_orchestrator/app/schemas/: ask_question_request_schema.py  ask_question_response_schema.py  authenticated_user_schema.py  feedback_schema.py  quota_schema.py  retrieve_chunks_request_schema.py  retrieve_chunks_response_schema.py
rag_orchestrator/app/services/: ask_question_service.py  auth_service.py  prompt_builder_service.py  retrieve_chunks_service.py  usage_tracking_service.py  user_identity_service.py
rag_orchestrator/docs/: index.md
rag_orchestrator/tests/unit_tests/: test_ask_question_service_unit.py  test_config_dependencies_unit.py  test_http_clients_unit.py  test_llm_oidc_clients_unit.py  test_orchestrator_services_unit.py  test_prompt_builder_service_unit.py  test_query_router_routes_unit.py  test_query_router_unit.py  test_usage_repository_unit.py  test_usage_tracking_public_unit.py  test_usage_tracking_service_unit.py
rag_reranker/: .dockerignore  mkdocs.yml  pyproject.toml
rag_reranker/app/: main.py
rag_reranker/app/api/: lifespan.py
rag_reranker/app/core/: config.json  config.py  exceptions.py  metrics.py  telemetry.py
rag_reranker/app/schemas/: rerank_chunks_response_schema.py
rag_reranker/app/services/: rerank_chunks_service.py
rag_reranker/docs/: index.md
rag_reranker/tests/integration_tests/: test_reranking_client_integration.py
rag_reranker/tests/unit_tests/: test_config_unit.py  test_rerank_chunks_service_unit.py  test_rerank_router_unit.py  test_reranking_client_unit.py
rag_retriever/: dockerfile  dockerfile.docs  mkdocs.yml  pyproject.toml
rag_retriever/app/: main.py
rag_retriever/app/api/: dependencies.py  lifespan.py
rag_retriever/app/core/: config.json  config.py  exceptions.py  metrics.py  telemetry.py
rag_retriever/app/schemas/: retrieve_chunks_response_schema.py  save_items_response_schema.py
rag_retriever/app/services/: manage_collection_service.py  retrieval_service.py  saving_service.py
rag_retriever/docs/: index.md
rag_retriever/tests/unit_tests/: test_collections_router_unit.py  test_dependencies_unit.py  test_manage_collection_service_unit.py  test_retrieval_service_unit.py  test_saving_service_unit.py  test_vector_store_repository_unit.py
(+142 files in other folders)
