[project]
name = "rag-monorepo"
version = "0.1.0"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.25.0",
]

[tool.uv]
workspace = { members = ["rag_orchestrator", "rag_embedder", "rag_reranker", "rag_evaluator", "rag_retriever", "rag_mcp", "rag_ihm"] }

[dependency-groups]
dev = [
    "locust>=2.44.4",
    "mkdocs>=1.6.1",
]
