[project]
name = "rag-embedder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.3.7",
    "debugpy>=1.8.18",
    "fastapi[standard]>=0.124.2",
    "langchain-text-splitters>=1.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pytest>=9.0.2",
]
