[project]
name = "rag-embedder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.3.7",
    "debugpy>=1.8.18",
    "fastapi[standard]>=0.124.2",
    "langchain-text-splitters>=1.1.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "prometheus-client>=0.25.0",
    "python-json-logger>=4.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "app/main.py",
    "app/api/lifespan.py",
    "app/core/telemetry.py",
]
