[project]
name = "rag-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.18",
    "fastapi[standard]>=0.124.2",
    "langchain>=1.2.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-exporter-otlp>=1.39.0",
    "opentelemetry-instrumentation-fastapi>=0.60b0",
    "opentelemetry-sdk>=1.39.0",
    "prometheus-client>=0.23.1",
    "python-json-logger>=4.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.coverage.run]
omit = [
    "app/main.py",
    "app/api/lifespan.py",
]
