[project]
name = "rag-ihm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.19",
    "pytest>=9.0.2",
]

[tool.coverage.run]
omit = [
    "app/main.py",
    "app/components/*.py",
    "app/pages/*.py",
    "app/styles/*.py",
]
