[project]
name = "rag-orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "chromadb>=1.3.7",
    "debugpy>=1.8.18",
    "fastapi[standard]>=0.124.2",
    "langchain-text-splitters>=1.1.0",
    "pyjwt[crypto]>=2.12.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.coverage.run]
omit = [
    "app/main.py",
    "app/api/lifespan.py",
    "app/api/routers/auth_router.py",
    "app/api/routers/usage_router.py",
    "app/dal/repositories/*.py",
]
