[project]
name = "rag-reranker"
version = "0.1.0"
description = "RAG reranking microservice"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.124.2",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-sdk>=1.41.1",
    "prometheus-client>=0.25.0",
    "python-json-logger>=4.1.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.18",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "app/main.py",
    "app/api/lifespan.py",
    "app/core/telemetry.py",
]
